--- a/statistic-page.html
+++ b/statistic-page.html
@@ -132,7 +132,10 @@
           <!-- Sales Graph Section -->
           <div class="sales-graph-section">
             <div class="graph-header">
-              <h2 id="chart-title">Sale</h2>
+              <div class="graph-title-wrapper">
+                <h2 id="chart-title">Sale</h2>
+                <span class="chart-date-range" id="chart-date-range"></span>
+              </div>
             </div>
             <div class="graph-container">
               <canvas id="sales-chart"></canvas>
