--- a/supplier-po-management.html
+++ b/supplier-po-management.html
@@ -140,6 +140,15 @@
               </div>
             </div>
           </div>
+        </div>
+        <!-- Active Filters Display -->
+        <div class="active-filters-container" id="supplier-incoming-active-filters-container" style="display: none;">
+          <div class="active-filters-label">Active Filters:</div>
+          <div class="active-filters-chips" id="supplier-incoming-active-filters-chips">
+            <!-- Active filter chips will be added here dynamically -->
+          </div>
+          <button class="clear-filters-btn" onclick="clearSupplierIncomingOrderFilters()">Clear All</button>
+        </div>
 
           <!-- Incoming Orders Table -->
           <div class="table-section">
@@ -230,6 +239,15 @@
               </div>
             </div>
           </div>
+        </div>
+        <!-- Active Filters Display -->
+        <div class="active-filters-container" id="supplier-payment-active-filters-container" style="display: none;">
+          <div class="active-filters-label">Active Filters:</div>
+          <div class="active-filters-chips" id="supplier-payment-active-filters-chips">
+            <!-- Active filter chips will be added here dynamically -->
+          </div>
+          <button class="clear-filters-btn" onclick="clearSupplierPaymentHistoryFilters()">Clear All</button>
+        </div>
 
           <!-- Payment History Table -->
           <div class="table-section">
@@ -319,6 +337,15 @@
               </div>
             </div>
           </div>
+        </div>
+        <!-- Active Filters Display -->
+        <div class="active-filters-container" id="supplier-history-active-filters-container" style="display: none;">
+          <div class="active-filters-label">Active Filters:</div>
+          <div class="active-filters-chips" id="supplier-history-active-filters-chips">
+            <!-- Active filter chips will be added here dynamically -->
+          </div>
+          <button class="clear-filters-btn" onclick="clearSupplierPOHistoryFilters()">Clear All</button>
+        </div>
 
           <!-- History Table -->
           <div class="table-section">
