--- a/general-settings.html
+++ b/general-settings.html
@@ -129,7 +129,7 @@
                 <div class="form-row">
                   <div class="form-group">
                     <label for="subscribe-date">BUSINESS SUBSCRIBED DATE</label>
-                    <input type="date" id="subscribe-date" class="settings-input" />
+                    <input type="date" id="subscribe-date" class="settings-input" disabled readonly />
                   </div>
                 </div>
 
@@ -201,9 +201,15 @@
                   </div>
 
                   <div class="form-group">
-                    <label for="points-duration">POINTS DURATION (DAYS)</label>
-                    <input type="number" id="points-duration" class="settings-input" min="0" placeholder="365" />
-                    <small class="form-hint">How long member points remain valid (in days)</small>
+                    <label for="points-duration">POINTS DURATION</label>
+                    <div class="points-duration-wrapper">
+                      <input type="number" id="points-duration" class="settings-input" min="0" placeholder="365" />
+                      <div class="duration-unit-toggle po-variant-unit-toggle" role="group" aria-label="Select duration unit">
+                        <button type="button" data-unit="days" class="po-variant-unit-btn active" id="duration-unit-days">DAYS</button>
+                        <button type="button" data-unit="months" class="po-variant-unit-btn" id="duration-unit-months">MONTHS</button>
+                      </div>
+                    </div>
+                    <small class="form-hint" id="points-duration-hint">How long member points remain valid (in days)</small>
                   </div>
                 </div>
 
@@ -303,8 +309,14 @@
                   <!-- User filter options will be loaded dynamically -->
                 </div>
               </div>
-              <button type="button" class="filter-btn log-book-filter-btn" onclick="loadLogBook()">FILTER</button>
-              <button type="button" class="filter-btn log-book-filter-btn" onclick="clearLogFilter()">CLEAR</button>
+            </div>
+            <!-- Active Filters Display -->
+            <div class="active-filters-container" id="log-book-active-filters-container" style="display: none;">
+              <div class="active-filters-label">Active Filters:</div>
+              <div class="active-filters-chips" id="log-book-active-filters-chips">
+                <!-- Active filter chips will be added here dynamically -->
+              </div>
+              <button class="clear-filters-btn" onclick="clearLogFilter()">Clear All</button>
             </div>
 
             <div class="log-book-table-container">
@@ -350,7 +362,7 @@
               <img src="image/sn_eyes_closed.png" alt="" aria-hidden="true" />
             </button>
           </div>
-          <textarea id="staff-auth-reason" class="edit-user-input" placeholder="Enter reason (optional)" rows="3" style="margin-top: 1rem; resize: vertical;"></textarea>
+          <textarea id="staff-auth-reason" class="edit-user-input" placeholder="Enter reason" rows="3" style="margin-top: 1rem; resize: vertical;" required></textarea>
         </div>
         <div class="logout-dialog-buttons">
           <button class="logout-dialog-btn" id="staff-auth-verify">VERIFY</button>
@@ -359,15 +371,45 @@
       </div>
     </div>
 
+    <!-- Manager Authentication Dialog -->
+    <div class="logout-dialog-overlay" id="manager-authentication-overlay" style="display: none;">
+      <div class="logout-dialog">
+        <p class="logout-dialog-message">MANAGER AUTHENTICATION REQUIRED</p>
+        <p style="color: #666; font-size: 0.85rem; margin-bottom: 1rem;">Please enter your username and password to proceed with this action. Only staff with MANAGER position can proceed.</p>
+        <div style="margin-bottom: 1.5rem;">
+          <input type="text" id="manager-auth-username" class="edit-user-input" placeholder="Enter your username" style="margin-bottom: 1rem;" />
+          <div class="input-wrap" style="position: relative;">
+            <input type="password" id="manager-auth-password" class="edit-user-input" placeholder="Enter your password" />
+            <button
+              type="button"
+              class="toggle-visibility"
+              aria-label="Show password"
+              aria-pressed="false"
+              data-target="manager-auth-password"
+              data-state="hidden"
+            >
+              <span class="sr-only">Toggle password visibility</span>
+              <img src="image/sn_eyes_closed.png" alt="" aria-hidden="true" />
+            </button>
+          </div>
+          <textarea id="manager-auth-reason" class="edit-user-input" placeholder="Enter reason" rows="3" style="margin-top: 1rem; resize: vertical;" required></textarea>
+        </div>
+        <div class="logout-dialog-buttons">
+          <button class="logout-dialog-btn" id="manager-auth-verify">VERIFY</button>
+          <button class="logout-dialog-btn" id="manager-auth-cancel">CANCEL</button>
+        </div>
+      </div>
+    </div>
+
     <!-- Log Reason View Popup -->
     <div class="logout-dialog-overlay" id="log-reason-popup" style="display: none;">
-      <div class="logout-dialog" style="max-width: 600px;">
-        <button type="button" class="back-button" id="close-log-reason-btn" aria-label="Close" style="position: relative; top: 0; left: 0; margin: 0 0 1rem 0;">
+      <div class="logout-dialog log-reason-popup-dialog" style="max-width: 800px; min-width: 600px; width: 90vw; max-height: 80vh;">
+        <button type="button" class="back-button log-reason-back-btn" id="close-log-reason-btn" aria-label="Close">
           <img src="image/sn_back_icon.png" alt="Close" />
         </button>
         <p class="logout-dialog-message">REASON</p>
-        <div style="background: #f5f5f5; border-radius: 8px; padding: 1.5rem; margin: 1rem 0; min-height: 100px; max-height: 400px; overflow-y: auto;">
-          <p id="log-reason-content" style="color: #1d1f2c; font-size: 0.95rem; line-height: 1.6; margin: 0; white-space: pre-wrap; word-wrap: break-word;"></p>
+        <div class="log-reason-content-wrapper">
+          <p id="log-reason-content" style="color: #1d1f2c; font-size: 1rem; line-height: 1.8; margin: 0; white-space: pre-wrap; word-wrap: break-word;"></p>
         </div>
         <div class="logout-dialog-buttons">
           <button class="logout-dialog-btn" id="close-log-reason-ok-btn">OK</button>
