--- a/user-supplier.html
+++ b/user-supplier.html
@@ -176,6 +176,14 @@
             </div>
           </div>
         </div>
+        <!-- Active Filters Display -->
+        <div class="active-filters-container" id="supplier-active-filters-container" style="display: none;">
+          <div class="active-filters-label">Active Filters:</div>
+          <div class="active-filters-chips" id="supplier-active-filters-chips">
+            <!-- Active filter chips will be added here dynamically -->
+          </div>
+          <button class="clear-filters-btn" onclick="clearSupplierFilters()">Clear All</button>
+        </div>
 
         <!-- Supplier Table -->
         <div class="table-section">
@@ -189,7 +197,6 @@
                 <th>Phone No</th>
                 <th>Status</th>
                 <th>Joined Date</th>
-                <th>Last Active</th>
                 <th>Actions</th>
               </tr>
             </thead>
@@ -300,31 +307,62 @@
       </div>
     </div>
 
-    <!-- Manager Verification Dialog -->
-    <div class="logout-dialog-overlay" id="manager-verification-overlay" style="display: none;">
+    <!-- Staff Authentication Dialog -->
+    <div class="logout-dialog-overlay" id="staff-authentication-overlay" style="display: none;">
       <div class="logout-dialog">
         <p class="logout-dialog-message">STAFF AUTHENTICATION REQUIRED</p>
         <p style="color: #666; font-size: 0.85rem; margin-bottom: 1rem;">Please enter your username and password to proceed with this action.</p>
         <div style="margin-bottom: 1.5rem;">
-          <input type="text" id="manager-verify-username" class="edit-user-input" placeholder="Enter your username" style="margin-bottom: 1rem;" />
+          <input type="text" id="staff-auth-username" class="edit-user-input" placeholder="Enter your username" style="margin-bottom: 1rem;" />
           <div class="input-wrap" style="position: relative;">
-            <input type="password" id="manager-verify-password" class="edit-user-input" placeholder="Enter your password" />
+            <input type="password" id="staff-auth-password" class="edit-user-input" placeholder="Enter your password" />
             <button
               type="button"
               class="toggle-visibility"
               aria-label="Show password"
               aria-pressed="false"
-              data-target="manager-verify-password"
+              data-target="staff-auth-password"
               data-state="hidden"
             >
               <span class="sr-only">Toggle password visibility</span>
               <img src="image/sn_eyes_closed.png" alt="" aria-hidden="true" />
             </button>
           </div>
+          <textarea id="staff-auth-reason" class="edit-user-input" placeholder="Enter reason" rows="3" style="margin-top: 1rem; resize: vertical;" required></textarea>
         </div>
         <div class="logout-dialog-buttons">
-          <button class="logout-dialog-btn" id="manager-verify-yes">VERIFY</button>
-          <button class="logout-dialog-btn" id="manager-verify-no">CANCEL</button>
+          <button class="logout-dialog-btn" id="staff-auth-verify">VERIFY</button>
+          <button class="logout-dialog-btn" id="staff-auth-cancel">CANCEL</button>
+        </div>
+      </div>
+    </div>
+
+    <!-- Manager Authentication Dialog -->
+    <div class="logout-dialog-overlay" id="manager-authentication-overlay" style="display: none;">
+      <div class="logout-dialog">
+        <p class="logout-dialog-message">MANAGER AUTHENTICATION REQUIRED</p>
+        <p style="color: #666; font-size: 0.85rem; margin-bottom: 1rem;">Please enter your username and password to proceed with this action. Only staff with MANAGER position can proceed.</p>
+        <div style="margin-bottom: 1.5rem;">
+          <input type="text" id="manager-auth-username" class="edit-user-input" placeholder="Enter your username" style="margin-bottom: 1rem;" />
+          <div class="input-wrap" style="position: relative;">
+            <input type="password" id="manager-auth-password" class="edit-user-input" placeholder="Enter your password" />
+            <button
+              type="button"
+              class="toggle-visibility"
+              aria-label="Show password"
+              aria-pressed="false"
+              data-target="manager-auth-password"
+              data-state="hidden"
+            >
+              <span class="sr-only">Toggle password visibility</span>
+              <img src="image/sn_eyes_closed.png" alt="" aria-hidden="true" />
+            </button>
+          </div>
+          <textarea id="manager-auth-reason" class="edit-user-input" placeholder="Enter reason" rows="3" style="margin-top: 1rem; resize: vertical;" required></textarea>
+        </div>
+        <div class="logout-dialog-buttons">
+          <button class="logout-dialog-btn" id="manager-auth-verify">VERIFY</button>
+          <button class="logout-dialog-btn" id="manager-auth-cancel">CANCEL</button>
         </div>
       </div>
     </div>
