--- a/forgot-password.html
+++ b/forgot-password.html
@@ -10,10 +10,10 @@
     <div class="canvas">
       <section class="login-dialog">
         <button type="button" class="back-button" aria-label="Back to login">
-          <img src="image/sn_back_icon.png" alt="Back" />
+          <img src="sn_back_icon.png" alt="Back" />
         </button>
         <div class="logo-wrapper">
-          <img src="image/sportNexusLatestLogo.png" alt="Sport Nexus logo" />
+          <img src="sportNexusLatestLogo.png" alt="Sport Nexus logo" />
         </div>
 
         <form class="login-form" autocomplete="off">
@@ -62,7 +62,7 @@
                 data-state="hidden"
               >
                 <span class="sr-only">Toggle password visibility</span>
-                <img src="image/sn_eyes_open.png" alt="" aria-hidden="true" />
+                <img src="image/sn_eyes_closed.png" alt="" aria-hidden="true" />
               </button>
             </div>
 
@@ -85,12 +85,13 @@
                 data-state="hidden"
               >
                 <span class="sr-only">Toggle password visibility</span>
-                <img src="image/sn_eyes_open.png" alt="" aria-hidden="true" />
+                <img src="image/sn_eyes_closed.png" alt="" aria-hidden="true" />
               </button>
             </div>
+
+            <!-- Change button -->
+            <button type="submit" class="login">CHANGE</button>
           </div>
-          <!-- Change button moved below the frame to keep frame size unchanged -->
-          <button type="submit" class="login">CHANGE</button>
         </form>
       </section>
     </div>
