--- a/supplier-po-management.html
+++ b/supplier-po-management.html
@@ -21,9 +21,9 @@
 
         <!-- Main Navigation Links (Center) -->
         <nav class="navbar-nav">
-          <a href="#" class="nav-link active" id="incoming-order-btn" data-view="incoming">INCOMING ORDER</a>
-          <a href="#" class="nav-link" id="history-btn" data-view="history">HISTORY</a>
-          <a href="#" class="nav-link" id="payment-history-btn" data-view="payments">PAYMENT HISTORY</a>
+          <a href="supplier-po-management.html" class="nav-link active" id="incoming-order-btn">INCOMING ORDER</a>
+          <a href="supplier-history.html" class="nav-link" id="history-btn">HISTORY</a>
+          <a href="supplier-payment-history.html" class="nav-link" id="payment-history-btn">PAYMENT HISTORY</a>
         </nav>
 
         <!-- Utility Section (Right) -->
