--- a/user-staff.html
+++ b/user-staff.html
@@ -292,7 +292,7 @@
           </div>
           <div class="edit-user-field-group">
             <label for="edit-user-phone">PHONE</label>
-            <input type="text" id="edit-user-phone" class="edit-user-input" placeholder="Enter phone number" />
+            <input type="text" id="edit-user-phone" class="edit-user-input" placeholder="e.g. 0123456789 or 0312345678" />
           </div>
           <div class="edit-user-field-group">
             <label for="edit-user-position">POSITION</label>
@@ -346,7 +346,7 @@
           </div>
           <div class="edit-user-field-group">
             <label for="add-user-phone">PHONE</label>
-            <input type="text" id="add-user-phone" class="edit-user-input" placeholder="Enter phone number" />
+            <input type="text" id="add-user-phone" class="edit-user-input" placeholder="e.g. 0123456789 or 0312345678" />
           </div>
           <div class="edit-user-field-group" id="add-user-position-group" style="display: none;">
             <label for="add-user-position">POSITION</label>
