--- a/new-po-page.html
+++ b/new-po-page.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://giksmtowehwmgqyymevp.supabase.co https://cdn.jsdelivr.net; connect-src 'self' https://giksmtowehwmgqyymevp.supabase.co wss://giksmtowehwmgqyymevp.supabase.co https://*.supabase.co wss://*.supabase.co https://cdn.jsdelivr.net; script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: blob:; frame-src 'self' https://www.paypal.com;">
     <title>Sport Nexus - Inventory Purchase</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="dashboard.css" />
@@ -79,25 +80,30 @@
           </div>
         </div>
 
-        <!-- Low Stock Section -->
+        <!-- Available Products Section -->
         <div class="low-stock-section">
           <div class="low-stock-header">
-            <h2 class="low-stock-title">LOW STOCK</h2>
-            <div class="category-btn-wrapper">
-              <button class="filter-btn category-btn" id="low-stock-category-btn">
-                <span id="low-stock-category-text">ALL CATEGORIES</span>
-                <div style="position: relative; width: 16px; height: 16px;">
-                  <img src="image/sn_icon_arrow_up.png" alt="Arrow" class="filter-icon filter-icon-up" />
-                  <img src="image/sn_icon_hover_arrow_up.png" alt="Arrow" class="filter-icon-hover filter-icon-hover-up" />
-                  <img src="image/sn_icon_arrow_down.png" alt="Arrow" class="filter-icon filter-icon-down" />
-                  <img src="image/sn_icon_hover_arrow_down.png" alt="Arrow" class="filter-icon-hover filter-icon-hover-down" />
-                </div>
-              </button>
-              <div class="category-submenu" id="low-stock-category-submenu">
-                <div class="category-list-scrollable-frame" id="low-stock-category-list">
-                  <!-- Categories loaded dynamically -->
+            <h2 class="low-stock-title">AVAILABLE PRODUCT</h2>
+            <div style="display: flex; gap: 0.75rem; align-items: center;">
+              <div class="category-btn-wrapper">
+                <button class="filter-btn category-btn" id="low-stock-category-btn">
+                  <span id="low-stock-category-text">ALL CATEGORIES</span>
+                  <div style="position: relative; width: 16px; height: 16px;">
+                    <img src="image/sn_icon_arrow_up.png" alt="Arrow" class="filter-icon filter-icon-up" />
+                    <img src="image/sn_icon_hover_arrow_up.png" alt="Arrow" class="filter-icon-hover filter-icon-hover-up" />
+                    <img src="image/sn_icon_arrow_down.png" alt="Arrow" class="filter-icon filter-icon-down" />
+                    <img src="image/sn_icon_hover_arrow_down.png" alt="Arrow" class="filter-icon-hover filter-icon-hover-down" />
+                  </div>
+                </button>
+                <div class="category-submenu" id="low-stock-category-submenu">
+                  <div class="category-list-scrollable-frame" id="low-stock-category-list">
+                    <!-- Categories loaded dynamically -->
+                  </div>
                 </div>
               </div>
+              <button class="filter-btn" id="low-stock-filter-btn" style="white-space: nowrap;">
+                <span>LOW STOCK</span>
+              </button>
             </div>
           </div>
           <div class="low-stock-products-container" id="low-stock-products-container">
