--- a/user-supplier.html
+++ b/user-supplier.html
@@ -233,7 +233,11 @@
           </div>
           <div class="edit-user-field-group">
             <label for="edit-user-phone">PHONE</label>
-            <input type="text" id="edit-user-phone" class="edit-user-input" placeholder="Enter phone number" />
+            <input type="text" id="edit-user-phone" class="edit-user-input" placeholder="e.g. 0123456789 or 0312345678" />
+          </div>
+          <div class="edit-user-field-group" id="edit-user-contact-person-group" style="display: none;">
+            <label for="edit-user-contact-person">CONTACT PERSON</label>
+            <input type="text" id="edit-user-contact-person" class="edit-user-input" placeholder="Enter contact person name" />
           </div>
           <div class="edit-user-field-group">
             <label for="edit-user-status">STATUS</label>
@@ -281,7 +285,7 @@
           </div>
           <div class="edit-user-field-group">
             <label for="add-user-phone">PHONE</label>
-            <input type="text" id="add-user-phone" class="edit-user-input" placeholder="Enter phone number" />
+            <input type="text" id="add-user-phone" class="edit-user-input" placeholder="e.g. 0123456789 or 0312345678" />
           </div>
           <div class="edit-user-field-group" id="add-user-position-group" style="display: none;">
             <label for="add-user-position">POSITION</label>
