--- a/supplier-payment-history.html
+++ b/supplier-payment-history.html
@@ -24,6 +24,7 @@
           <a href="supplier-po-management.html" class="nav-link">INCOMING ORDER</a>
           <a href="supplier-history.html" class="nav-link">HISTORY</a>
           <a href="supplier-payment-history.html" class="nav-link active">PAYMENT HISTORY</a>
+          <a href="supplier-return-goods.html" class="nav-link">RETURN GOODS</a>
         </nav>
 
         <!-- Utility Section (Right) -->
